
WIP      Advanced fuzzy search engine based on the Levenshtein Distance algorithm, for both
         online and offline scrapers. There is a Python implementation of the algorithm here,
         https://github.com/seatgeek/fuzzywuzzy

WIP      Massive upgrade of AEL Offline scraper database.

WIP      Support Kodi VFS and ROMs in remote filesystems for Retroplayer.
         Copy remote ROMs for external launchers?

WIP      Edit multidisc ROMs.

WIP      Options to generate the 1G1R list, like prefer ROMs from Europe, Japan or USA.

WIP      Changes and suggestions propoed by Atsumori.

         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2560843#pid2560843
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2586596#pid2586596

WIP      LaunchBox Games Database scraper.
         Apparently LaunchBox GamesDB started as a copy of TheGamesDB. Currently there is no
         API to access LaunchBox GamesDB but an XML with all the database info can be downloaded.

         See http://gamesdb.launchbox-app.com/
         See https://bitbucket.org/jasondavidcarr/launchbox/issues/902/api-access-to-launchbox

[B]Advanced Emulator Launcher | version 0.9.7 | XX Jun 2017[/B]

FEATURE  Removed ElementTree dependency in addon.xml. It's not longer needed.
         AEL ONLY WORKS ON KRYPTON NOW!!!

FEATURE  Use the <news> tag in addon.xml. In general, have a look at http://kodi.wiki/view/addon.xml
         and modernise addon.xml.

FEATURE  Update code to use new xbmcgui.Dialog().select() useDetails parameter. Get rid of the 
         ImgSelectDialog() class. This need Krypton Beta 4 to run!
         See https://forum.kodi.tv/showthread.php?tid=250936&pid=2438074#pid2438074

WORKING  Make use of Krypton features in the several dialogs of the addon: new param: "preselect" 
         for Dialog().multiselect() and Dialog().select(). 
         See https://forum.kodi.tv/showthread.php?tid=250936&pid=2327011#pid2327011
