@@ -1,10 +1,9 @@
 # -*- coding: utf-8 -*-
 #
-# Advanced Emulator Launcher scraping engine
+# Advanced Emulator Launcher platform and emulator information
 #
 
 # Copyright (c) 2016-2017 Wintermute0110 <wintermute0110@gmail.com>
-# Portions (c) 2010-2015 Angelscry
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -18,50 +17,11 @@
 # --- Python standard library ---
 from __future__ import unicode_literals
 
-# -----------------------------------------------------------------------------
-# Miscellaneous emulator and gamesys (platforms) supported.
-# -----------------------------------------------------------------------------
-def emudata_get_program_arguments( app ):
-    # Based on the app. name, retrieve the default arguments for the app.
-    app = app.lower()
-    applications = {
-        'mame'        : '"$rom$"',
-        'mednafen'    : '-fs 1 "$rom$"',
-        'mupen64plus' : '--nogui --noask --noosd --fullscreen "$rom$"',
-        'nestopia'    : '"$rom$"',
-        'xbmc'        : 'PlayMedia($rom$)',
-        'kodi'        : 'PlayMedia($rom$)',
-        'retroarch'   : '-L /path/to/core -f "$rom$"',
-        'yabause'     : '-a -f -i "$rom$"',
-    }
-    for application, arguments in applications.iteritems():
-        if app.find(application) >= 0:
-            return arguments
-
-    return '"$rom$"'
-
-def emudata_get_program_extensions( app ):
-    # Based on the app. name, retrieve the recognized extension of the app.
-    app = app.lower()
-    applications = {
-        'mame'       : 'zip|7z',
-        'mednafen'   : 'zip|cue',
-        'mupen64plus': 'z64|zip|n64',
-        'nestopia'   : 'nes|zip',
-        'retroarch'  : 'zip|cue',
-        'yabause'    : 'cue',
-    }
-    for application, extensions in applications.iteritems():
-        if app.find(application) >= 0:
-            return extensions
-
-    return ""
-
-# -----------------------------------------------------------------------------
+# -------------------------------------------------------------------------------------------------
 # This dictionary has the AEL "official" game system list.
-# -----------------------------------------------------------------------------
+# -------------------------------------------------------------------------------------------------
 # >> When possible user No-Intro DAT-o-MATIC names
-# >> Fallback to Wikipedia
+# >> Fallback to Wikipedia names
 #
 AEL_platform_list = [
     # --- MAME/Arcade ---
@@ -148,9 +108,21 @@ AEL_platform_list = [
     'Unknown'
 ]
 
-# -----------------------------------------------------------------------------
+#
+# Returns the platform numerical index from the platform name. If the platform name is not
+# found then returns the index of the 'Unknown' platform
+#
+def get_AEL_platform_index(platform_name):
+    try:
+        platform_index = AEL_platform_list.index(platform_name)
+    except:
+        platform_index = AEL_platform_list.index('Unknown')
+
+    return platform_index
+
+# -------------------------------------------------------------------------------------------------
 # Translation of AEL oficial gamesys (platform) name to scraper particular name
-# -----------------------------------------------------------------------------
+# -------------------------------------------------------------------------------------------------
 #
 # GameDBInfo XML are compatible with HyperSpin Hyperlist XML files.
 #
@@ -486,3 +458,42 @@ def AEL_platform_to_MobyGames(platform_AEL):
     except: platform_MobyGames = ''
         
     return platform_MobyGames
+
+# -------------------------------------------------------------------------------------------------
+# Miscellaneous emulator and gamesys (platforms) supported.
+# -------------------------------------------------------------------------------------------------
+def emudata_get_program_arguments(app):
+    # Based on the app. name, retrieve the default arguments for the app.
+    app = app.lower()
+    applications = {
+        'mame'        : '"$rom$"',
+        'mednafen'    : '-fs 1 "$rom$"',
+        'mupen64plus' : '--nogui --noask --noosd --fullscreen "$rom$"',
+        'nestopia'    : '"$rom$"',
+        'xbmc'        : 'PlayMedia($rom$)',
+        'kodi'        : 'PlayMedia($rom$)',
+        'retroarch'   : '-L /path/to/core -f "$rom$"',
+        'yabause'     : '-a -f -i "$rom$"',
+    }
+    for application, arguments in applications.iteritems():
+        if app.find(application) >= 0:
+            return arguments
+
+    return '"$rom$"'
+
+def emudata_get_program_extensions(app):
+    # Based on the app. name, retrieve the recognized extension of the app.
+    app = app.lower()
+    applications = {
+        'mame'       : 'zip|7z',
+        'mednafen'   : 'zip|cue',
+        'mupen64plus': 'z64|zip|n64',
+        'nestopia'   : 'nes|zip',
+        'retroarch'  : 'zip|cue',
+        'yabause'    : 'cue',
+    }
+    for application, extensions in applications.iteritems():
+        if app.find(application) >= 0:
+            return extensions
+
+    return ''
